vlib/v/parser/tests/prefix_err_2.out
vlib/v/parser/tests/prefix_err_2.vv:1:9: error: invalid expression: unexpected token `-`
    1 | _ = 5 - - (((-5)))
      |         ^
