vlib/v/parser/tests/prefix_err_2.vv
_ = 5 - - (((-5)))
